nav dropdown falling behind gallery & ad (BugId:2516)
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@33303 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/skins/oasis/css/core/_WikiHeader.scss
+++ b/skins/oasis/css/core/_WikiHeader.scss
@@ -2,7 +2,7 @@
 	margin: 0 0 15px;
 	padding: 10px 10px 9px;
 	position: relative;
-	z-index: 2; //ie7 requirement
+	z-index: 1000; // BugId:2516
 	.wordmark {
 		@include wordmark;
 		color: $color-links;
